# herokurustbuild

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  Procfile  README.md  startbot.sh
s/: p
src/: main.rs
static/: index.html  smartdom.css  smartdom.js
