[package]
name = "herokurustbuild"
version = "0.1.0"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
lichessbot = "0.1.30"
actix-web = "4.0.0-beta.1"
actix = "0.11.0-beta.1"
actix-codec = "0.4.0-beta.1"
actix-web-actors = "4.0.0-beta.1"
actix-files = "0.6.0-beta.1"
awc = "2"
futures = "0.3.1"
bytes = "0.5.3"
chrono = "0.4.19"

[dependencies.tokio]
version = "1.0.1"
features = ["full"]

[[bin]]
name = "hello"
path = "src/main.rs"
