[package]
name = "herokurustbuild"
version = "0.1.0"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
chrono = "0.4.19"
lichessbot = "0.1.31"
actix-web = "4.0.0-beta.1"
actix = "0.11.0-beta.1"
actix-codec = "0.4.0-beta.1"
actix-web-actors = "4.0.0-beta.1"
actix-files = "0.6.0-beta.1"

[dependencies.tokio]
version = "1.1.0"
features = [ "full" ]

[[bin]]
name = "hello"
path = "src/main.rs"
